--- a/public/index.html
+++ b/public/index.html
@@ -293,6 +293,14 @@
         const API = '/api/v1';
         const routes = [
             {
+                section: 'General', items: [
+                    {
+                        method: 'GET', path: '/nrp-whitelist', desc: 'Get allowed NRPs (Demo)',
+                        resp: '{\n  "success": true,\n  "message": "success get whitelist",\n  "data": [\n    "5025211014",\n    "..."\n  ]\n}'
+                    }
+                ]
+            },
+            {
                 section: 'Authentication', items: [
                     {
                         method: 'POST', path: '/auth/login', desc: 'Generate JWT token',
