--- a/public/index.html
+++ b/public/index.html
@@ -293,11 +293,35 @@
         const API = '/api/v1';
         const routes = [
             {
-                section: 'General', items: [
+                section: 'NRP Whitelist', items: [
                     {
-                        method: 'POST', path: '/nrp-whitelist', desc: 'Check if NRP is allowed (Demo)',
+                        method: 'GET', path: '/nrp-whitelist', desc: 'List all whitelisted NRPs',
+                        params: [
+                            { name: 'page', ph: '1' },
+                            { name: 'limit', ph: '10' }
+                        ],
+                        resp: '{\n  "success": true,\n  "data": [ ... ],\n  "meta": { ... }\n}'
+                    },
+                    {
+                        method: 'POST', path: '/nrp-whitelist', desc: 'Check if NRP is whitelisted',
                         body: '{\n  "nrp": "5025211014"\n}',
                         resp: '{\n  "success": true,\n  "message": "NRP is allowed",\n  "data": null\n}'
+                    },
+                    {
+                        method: 'POST', path: '/nrp-whitelist/add', desc: 'Add NRP to whitelist',
+                        body: '{\n  "nrp": "5025211014",\n  "name": "Budi"\n}',
+                        resp: '{\n  "success": true,\n  "message": "success create nrp whitelist",\n  "data": { ... }\n}'
+                    },
+                    {
+                        method: 'PUT', path: '/nrp-whitelist/:id', desc: 'Update whitelisted entry',
+                        hasParams: true,
+                        body: '{\n  "name": "Budi Updated"\n}',
+                        resp: '{\n  "success": true,\n  "data": { ... }\n}'
+                    },
+                    {
+                        method: 'DELETE', path: '/nrp-whitelist/:nrp', desc: 'Remove NRP from whitelist',
+                        hasParams: true,
+                        resp: '{\n  "success": true,\n  "message": "success delete cabinet info"\n}'
                     }
                 ]
             },
@@ -372,13 +396,13 @@
                     },
                     {
                         method: 'POST', path: '/progenda', desc: 'Create progenda',
-                        body: '{\n  "name": "Program Kerja A",\n  "goal": "Tujuan...",\n  "description": "Deskripsi...",\n  "timeline": "Januari 2024",\n  "website_link": "https://...",\n  "department_id": "uuid"\n}',
+                        body: '{\n  "name": "Program Kerja A",\n  "goal": "Tujuan...",\n  "description": "Deskripsi...",\n  "instagram_link": "https://...",\n  "twitter_link": "https://...",\n  "youtube_link": "https://...",\n  "linkedin_link": "https://...",\n  "website_link": "https://...",\n  "department_id": "uuid",\n  "timelines": [\n    { "event_name": "Pendaftaran", "date": "Januari 2024" },\n    { "event_name": "Pelaksanaan", "date": "Februari 2024" }\n  ]\n}',
                         resp: '{\n  "success": true,\n  "data": { ... }\n}'
                     },
                     {
                         method: 'PUT', path: '/progenda/:id', desc: 'Update progenda',
                         hasParams: true,
-                        body: '{\n  "name": "Updated Name",\n  "timeline": "Februari 2024"\n}',
+                        body: '{\n  "name": "Updated Name",\n  "instagram_link": "https://ig.com/new",\n  "timelines": [\n    { "event_name": "Updated Phase", "date": "Mar 2024" }\n  ]\n}',
                         resp: '{\n  "success": true,\n  "data": { ... }\n}'
                     },
                     {
@@ -501,6 +525,13 @@
                             { name: 'filter', ph: 'value' }
                         ],
                         resp: '{\n  "success": true,\n  "data": [],\n  "meta": { ... }\n}'
+                    },
+                    {
+                        method: 'GET', path: '/news/autocompletion', desc: 'Search title for autocompletion',
+                        params: [
+                            { name: 'search', ph: 'Prefix (e.g. Pene)...' }
+                        ],
+                        resp: '{\n  "success": true,\n  "message": "success get autocompletion",\n  "data": ["Penerimaan Anggota", "Penetapan ..."]\n}'
                     },
                     {
                         method: 'GET', path: '/news/:slug', desc: 'Get news article by Slug or ID',
@@ -787,6 +818,17 @@
                     url = url.replace(':slug', slugInput.value);
                 } else {
                     status.textContent = 'Error: Slug is required';
+                    status.className = 'response-status error';
+                    return;
+                }
+            }
+
+            if (path.includes('/:nrp')) {
+                const nrpInput = document.getElementById(id + '-path-nrp');
+                if (nrpInput && nrpInput.value) {
+                    url = url.replace(':nrp', nrpInput.value);
+                } else {
+                    status.textContent = 'Error: NRP is required';
                     status.className = 'response-status error';
                     return;
                 }
