fix: cabinet infos dto

--- a/public/index.html
+++ b/public/index.html
@@ -642,6 +642,7 @@
                 { name: "caption", type: "text", label: "Caption", ph: "Enter caption..." },
                 { name: "category", type: "text", label: "Category", ph: "logo, event, etc." },
                 { name: "department_id", type: "text", label: "Department ID (UUID, optional)", ph: "UUID..." },
+                { name: "progenda_id", type: "text", label: "Progenda ID (UUID, optional)", ph: "UUID..." },
               ],
               resp: '{\n  "success": true,\n  "message": "success create gallery",\n  "data": { "id": "uuid", "image_url": "/uploads/filename.jpg" }\n}',
             },
